    - Add support for kernel-specific pkg-lists entries: use lines like
      "package [2.2 2.4]" or "package * [2.6]". Should eventually form a
      simpler replacement for the kernel_specific directory.
    - Include initrd.list on amd64/i386 images.
    - Add hd-media image for powerpc, including a boot.img.gz designed for
      use on USB sticks.
  * Christian Perrier
    - Add 7 missing characters to installer/build/needed-characters/ar
      Thanks to Naidim Shaikli and Arabeyes contributors
    - Add the list of needed characters for Belarussian
  * Martin Michlmayr
    - Add a ramdisk_size parameter to sb1-swarm-bn's boot configuration
      file since the initrd is now bigger than what the kernel expects.
  * Stephen R. Marenka
    - Add m68k/amiga startup scripts with thanks to and the permission of
      Christian T. Steigies <cts@debian.org>.
  * fjpop
    - Implement new-generation build scripts for sarge branch.

 -- Christian Perrier <bubulle@debian.org>  Sun, 12 Dec 2004 20:39:29 +0100

debian-installer (20041118) unstable; urgency=HIGH

  * Joey Hess
    - Add debian-installer/locale=C to s390 parmfile to work around
      bug #281538 in languagechooser.
    - Add module-init-tools to build deps for hppa, to fix FTBFS.

 -- Joey Hess <joeyh@debian.org>  Thu, 18 Nov 2004 14:12:41 -0500

debian-installer (20041115) unstable; urgency=HIGH

  * Bdale Garbee
    - Enable hppa 2.6 cd initrd building now that we have suitable udebs
    - freshen hppa configs, adding modules udebs for hppa 2.6 kernels, etc
    - update hppa kernel versions
    - add discover udebs to hppa 2.6 package list
  * Steve Langasek
    - Extensive alpha-related edits to the install manual; it should now
      exhibit more than a remote correspondence to the installer itself.
  * Stephen R. Marenka
    - Explicitly note in manual that m68k 2.2 kernels should use initrd22
      ramdisks.
    - Fix m68k/bvme6000 links in manual.
    - Add mac53c9x kernel parameter notes to manual.