@@ -65,6 +65,8 @@
    <!ENTITY floppy-powerpc.xml   SYSTEM "##SRCPATH##/install-methods/floppy/powerpc.xml">
 
   <!ENTITY boot-usb-files.xml       SYSTEM "##SRCPATH##/install-methods/boot-usb-files.xml">
+   <!ENTITY usb-setup-i386.xml          SYSTEM "##SRCPATH##/install-methods/usb-setup/i386.xml">
+   <!ENTITY usb-setup-powerpc.xml       SYSTEM "##SRCPATH##/install-methods/usb-setup/powerpc.xml">
 
   <!ENTITY boot-drive-files.xml     SYSTEM "##SRCPATH##/install-methods/boot-drive-files.xml">
 
