@@ -1,0 +1,117 @@
+<!-- retain these comments for translator revision tracking -->
+<!-- $Id$ -->
+
+   <sect3 arch="powerpc">
+   <title>USB stick partitioning on &arch-title;</title>
+<para>
+
+Most USB sticks do not come pre-configured in such a way that Open
+Firmware can boot from them, so you will need to repartition the stick.
+On Mac systems, run <userinput>mac-fdisk /dev/sda</userinput>,
+initialise a new partition map using the <userinput>i</userinput>
+command, and create a new partition of type Apple_Bootstrap using the
+<userinput>C</userinput> command. (Note that the first "partition" will
+always be the partition map itself.) Then type
+
+<informalexample><screen>
+
+hformat /dev/<replaceable>sda2</replaceable>
+
+</screen></informalexample>
+
+Take care that you use the correct device name for your USB stick. The
+<command>hformat</command> command is contained in the
+<classname>hfsutils</classname> Debian package.
+
+</para><para>
+
+In order to start the kernel after booting from the USB stick, we will
+put a boot loader on the stick. The <command>yaboot</command> boot
+loader can be installed on an HFS filesystem and can be reconfigured by
+just editing a text file. Any operating system which supports the HFS
+file system can be used to make changes to the configuration of the boot
+loader.
+
+</para><para>
+
+The normal <command>ybin</command> tool that comes with
+<command>yaboot</command> does not yet understand USB storage devices,
+so you will have to install <command>yaboot</command> by hand using the
+<classname>hfsutils</classname> tools. Type
+
+<informalexample><screen>
+
+hmount /dev/sda2
+hcopy -r /usr/lib/yaboot/yaboot :
+hattrib -c UNIX -t tbxi :yaboot
+hattrib -b :
+humount
+
+</screen></informalexample>
+
+Again, take care that you use the correct device name. The partition
+must not be otherwise mounted during this procedure. This procedure
+writes the boot loader to the partition, and uses the HFS utilities to
+mark it in such a way that Open Firmware will boot it. Having done this,
+the rest of the USB stick may be prepared using the normal Unix
+utilities.
+
+</para><para>
+
+Mount the partition (<userinput>mount /dev/sda2 /mnt</userinput>) and
+copy the following files from the Debian archives to the stick:
+
+<itemizedlist>
+<listitem><para>
+
+<filename>vmlinux</filename> (kernel binary)
+
+</para></listitem>
+<listitem><para>
+
+<filename>initrd.gz</filename> (initial ramdisk image)
+
+</para></listitem>
+<listitem><para>
+
+<filename>yaboot.conf</filename> (yaboot configuration file)
+
+</para></listitem>
+<listitem><para>
+
+<filename>boot.msg</filename> (optional boot message)
+
+</para></listitem>
+<listitem><para>
+
+Optional kernel modules
+
+</para></listitem>
+</itemizedlist>
+
+</para><para>
+
+The <filename>yaboot.conf</filename> configuration file should
+contain the following lines:
+
+<informalexample><screen>
+
+default=install
+root=/dev/ram
+
+message=/boot.msg
+
+image=/vmlinux
+        label=install
+        initrd=/initrd.gz
+        initrd-size=10000
+        append="devfs=mount,dall --"
+        read-only
+
+</screen></informalexample>
+
+Please note that the <userinput>initrd-size</userinput> parameter
+may need to be increased, depending on the image you are booting.
+
+</para>
+   </sect3>
