@@ -48,6 +48,8 @@ debian-installer (20041119) UNRELEASED; urgency=low
     - Include initrd.list on amd64/i386 images.
     - Add hd-media image for powerpc, including a boot.img.gz designed for
       use on USB sticks.
+    - Document USB booting on powerpc. This involved splitting out the
+      documentation for USB booting on i386 a bit.
   * Christian Perrier
     - Add 7 missing characters to installer/build/needed-characters/ar
       Thanks to Naidim Shaikli and Arabeyes contributors
